--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,6 +3,8 @@
 
   <span>Welcome</span>
   <div class="spacer"></div>
-  <a routerLink="/dashboard">Dashboard</a>
-
+  <nav>
+    <a routerLink="/dashboard">Dashboard</a>
+    <a routerLink="/trades">Trades</a>
+  </nav>
 </div>
