--- a/src/app/trades/trades.component.html
+++ b/src/app/trades/trades.component.html
@@ -1,1 +1,10 @@
 <p>trades works!</p>
+<p>trades works!</p>
+<p>trades works!</p>
+<p>trades works!</p>
+<p>trades works!</p>
+<p>trades works!</p>
+<p>trades works!</p>
+<p>trades works!</p>
+<p>trades works!</p>
+<p>trades works!</p>
