--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,10 +1,11 @@
 <!-- Toolbar -->
 <div class="toolbar" role="banner">
 
-  <span>Welcome</span>
-  <div class="spacer"></div>
+
+
   <nav>
     <a routerLink="/dashboard">Dashboard</a>
     <a routerLink="/trades">Trades</a>
+    <a routerLink="/about">About</a>
   </nav>
 </div>
