--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,8 +1,6 @@
-<!-- Footer -->
-<div class="footer" role="banner">
+<footer class="footer" role="banner">
 
   <span>	&copy; Olga Toltinova 2021</span>
   <div class="spacer"></div>
 
-
-</div>
+</footer>
