--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,4 +1,4 @@
-  .toolbar {
+  .header {
     position: absolute;
     top: 0;
     left: 0;
@@ -9,23 +9,4 @@
     background-color: #1976d2;
     color: white;
     font-weight: 600;
-  }
-
-  .toolbar img {
-    margin: 0 16px;
-  }
-
-  .toolbar #twitter-logo {
-    height: 40px;
-    margin: 0 8px;
-  }
-
-  .toolbar #youtube-logo {
-    height: 40px;
-    margin: 0 16px;
-  }
-
-  .toolbar #twitter-logo:hover,
-  .toolbar #youtube-logo:hover {
-    opacity: 0.8;
   }
