--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,8 +1,8 @@
 <!-- Toolbar -->
-<div class="toolbar" role="banner">
+<header class="header" role="banner">
   <nav>
     <a routerLink="/dashboard">Dashboard</a>
     <a routerLink="/trades">Trades</a>
     <a routerLink="/about">About</a>
   </nav>
-</div>
+</header>
