--- a/src/app/trades/trades.component.html
+++ b/src/app/trades/trades.component.html
@@ -14,3 +14,6 @@
     <span class="badge">{{trade.id}}</span> {{trade.currency}}: {{trade.amount}} - {{trade.timestamp}}
   </li>
 </ul>
+
+
+<p>{{ message }}</p>
