--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,12 +1,14 @@
-<p>about works!</p>
-<p>about works!</p>
-<p>about works!</p>
-<p>about works!</p>
-<p>about works!</p>
-<p>about works!</p>
-<p>about works!</p>
-<p>about works!</p>
-<p>about works!</p>
-<p>about works!</p>
-<p>about works!</p>
-<p>about works!</p>
+<div class="content" role="main">
+  <p>about works!</p>
+  <p>about works!</p>
+  <p>about works!</p>
+  <p>about works!</p>
+  <p>about works!</p>
+  <p>about works!</p>
+  <p>about works!</p>
+  <p>about works!</p>
+  <p>about works!</p>
+  <p>about woasdfrks!</p>
+  <p>about works!</p>
+  <p>about works!</p>
+</div>
