--- a/src/styles.css
+++ b/src/styles.css
@@ -12,3 +12,12 @@
     color: #125699;
   }
 
+  .content {
+    margin-top: 60px;
+    display: flex;
+    margin: 82px auto 32px;
+    padding: 0 16px;
+    max-width: 960px;
+    flex-direction: column;
+    align-items: center;
+  }
