--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,14 +1,3 @@
 <div class="content" role="main">
-  <p>about works!</p>
-  <p>about works!</p>
-  <p>about works!</p>
-  <p>about works!</p>
-  <p>about works!</p>
-  <p>about works!</p>
-  <p>about works!</p>
-  <p>about works!</p>
-  <p>about works!</p>
-  <p>about woasdfrks!</p>
-  <p>about works!</p>
-  <p>about works!</p>
+  <app-about-detail></app-about-detail>
 </div>
