--- a/src/app/trades/trades.component.html
+++ b/src/app/trades/trades.component.html
@@ -1,21 +1,11 @@
 <div class="content" role="main">
-  <p></p>
-  <p></p>
-  <p></p>
-  <p></p>
-  <p></p>
-  <p>trades works!</p>
-  <p></p>
-  <p></p>
-  <p>_____________ </p>
-
+<app-trades-detail></app-trades-detail>
   <h2>My Trades</h2>
   <ul class="trades">
     <li *ngFor="let trade of trades">
       <span class="badge">{{trade.id}}</span> {{trade.currency}}: {{trade.amount}} - {{trade.timestamp}}
     </li>
   </ul>
-
 
   <p>{{ message }}</p>
 </div>
