--- a/src/app/trades/trades.component.html
+++ b/src/app/trades/trades.component.html
@@ -1,4 +1,6 @@
 <div class="content" role="main">
   <h2>My Trades</h2>
   <app-trades-detail></app-trades-detail>
+  <app-trades-detail></app-trades-detail>
+  <app-trades-detail></app-trades-detail>
 </div>
