--- a/src/styles.css
+++ b/src/styles.css
@@ -29,7 +29,7 @@
   a,
   a:visited,
   a:hover {
-    color: white;
+    color: #1976d2;
     text-decoration: none;
   }
 
@@ -67,10 +67,10 @@
   }
 
   .card {
-    border-radius: 4px;
+    border-radius: 40px;
     border: 1px solid #eee;
     background-color: #fafafa;
-    height: 40px;
+    height: 600px;
     width: 200px;
     margin: 0 8px 16px;
     padding: 16px;
