--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+  @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
   :host {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
@@ -55,118 +56,11 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
   }
-.card svg.material-icons path {
-    fill: #888;
-  }
-
-  .card-container {
+.card-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     margin-top: 16px;
+    margin-right: 16px;
+    margin-left: 16px;
   }
-
-  .card {
-    border-radius: 40px;
-    border: 1px solid #eee;
-    background-color: #fafafa;
-    height: 600px;
-    width: 200px;
-    margin: 0 8px 16px;
-    padding: 16px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    transition: all 0.2s ease-in-out;
-    line-height: 24px;
-  }
-
-  .card-container .card:not(:last-child) {
-    margin-right: 0;
-  }
-
-  .card.card-small {
-    height: 16px;
-    width: 168px;
-  }
-
-  .card-container .card:not(.highlight-card) {
-    cursor: pointer;
-  }
-
-  .card-container .card:not(.highlight-card):hover {
-    transform: translateY(-3px);
-    box-shadow: 0 4px 17px rgba(0, 0, 0, 0.35);
-  }
-
-  .card-container .card:not(.highlight-card):hover .material-icons path {
-    fill: rgb(105, 103, 103);
-  }
-
-  .card.highlight-card {
-    background-color: #1976d2;
-    color: white;
-    font-weight: 600;
-    border: none;
-    width: auto;
-    min-width: 30%;
-    position: relative;
-  }
-
-  .card.card.highlight-card span {
-    margin-left: 60px;
-  }
-
-  @media screen and (max-width: 767px) {
-
-      .card-container > *:not(.circle-link) ,
-      .terminal {
-        width: 100%;
-      }
-
-      .card:not(.highlight-card) {
-        height: 16px;
-        margin: 8px 0;
-      }
-
-      .card.highlight-card span {
-        margin-left: 72px;
-      }
-
-      svg#rocket-smoke {
-        right: 120px;
-        transform: rotate(-5deg);
-      }
-    }
-
-
-  @media screen and (max-width: 767px) {
-
-      .card-container > *:not(.circle-link) ,
-      .terminal {
-        width: 100%;
-      }
-
-      .card:not(.highlight-card) {
-        height: 16px;
-        margin: 8px 0;
-      }
-
-      .card.highlight-card span {
-        margin-left: 72px;
-      }
-
-      svg#rocket-smoke {
-        right: 120px;
-        transform: rotate(-5deg);
-      }
-    }
-
-    @media screen and (max-width: 575px) {
-      svg#rocket-smoke {
-        display: none;
-        visibility: hidden;
-      }
-    }
-
