--- a/src/app/dashboard-balance/dashboard-balance.component.html
+++ b/src/app/dashboard-balance/dashboard-balance.component.html
@@ -1,6 +1,6 @@
 
 <div class="card-container">
-  <mat-card>
+  <mat-card class="card" target="_blank" rel="noopener">
       <mat-card-title>Total</mat-card-title>
       <span>Total</span>
       <span>BTC: {{amount}}</span>
