--- a/src/app/dashboard-performance/dashboard-performance.component.html
+++ b/src/app/dashboard-performance/dashboard-performance.component.html
@@ -1,5 +1,5 @@
 <div class="card-container">
-  <mat-card>
+  <mat-card class="card" target="_blank" rel="noopener">
     <mat-card-title>Performance</mat-card-title>
     <span>Total</span>
 
