--- a/src/app/dashboard-trades/dashboard-trades.component.html
+++ b/src/app/dashboard-trades/dashboard-trades.component.html
@@ -1,5 +1,5 @@
 <div class="card-container">
-  <mat-card>
+  <mat-card class="card" target="_blank" rel="noopener">
     <mat-card-title>Trades</mat-card-title>
     <span>Total</span>
   </mat-card>
