--- a/src/app/trades-detail/trades-detail.component.html
+++ b/src/app/trades-detail/trades-detail.component.html
@@ -1,3 +1,6 @@
+
+<p>{{ left }}/{{ right }}</p>
+
 <ul class="trades">
   <li *ngFor="let trade of trades">
     <span class="badge">{{trade.id}}</span> {{trade.currency}}: {{trade.amount}} - {{trade.timestamp}}
