--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -14,8 +14,10 @@
     width: 100%;
     height: 60px;
     display: flex;
+    box-shadow: 0px -2px 8px rgba(0, 0, 0, 0.1);
     align-items: center;
-    background-color: #1976d2;
-    color: white;
+    background-color: white;
+    color: #CFCFCF;
+
     font-weight: 600;
   }
