--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,22 +1,27 @@
-    :host {
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-      font-size: 14px;
-      color: #333;
-      box-sizing: border-box;
-      -webkit-font-smoothing: antialiased;
-      -moz-osx-font-smoothing: grayscale;
-    }
 
+  a,
+  a:visited,
+  a:hover {
+    padding: 8px 8px;
+    color: #101A35;
+    text-decoration: none;
+  }
+
+  a:hover {
+    color: #125699;
+  }
 
   .header {
     position: absolute;
+    filter: drop-shadow(0px 2px 4px rgba(0, 0, 0, 0.1));
     top: 0;
     left: 0;
     right: 0;
     height: 60px;
     display: flex;
     align-items: center;
-    background-color: #1976d2;
-    color: white;
+    background-color: white;
+    color: #101A35;
     font-weight: 600;
   }
+
