--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,8 +1,13 @@
 <!-- Toolbar -->
-<header class="header" role="banner">
-  <nav>
-    <a routerLink="/dashboard">Dashboard</a>
-    <a routerLink="/trades">Trades</a>
-    <a routerLink="/about">About</a>
-  </nav>
-</header>
+
+<mat-toolbar class="header">
+  <span>Mbot</span>
+
+    <nav>
+      <a routerLink="/dashboard">Dashboard</a>
+      <a routerLink="/trades">Trades</a>
+      <a routerLink="/about">About</a>
+    </nav>
+</mat-toolbar>
+
+
