--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,9 +1,9 @@
 <!-- Toolbar -->
 
 <mat-toolbar class="header">
-  <span>Mbot</span>
+  <span class="spacer">Mbot</span>
 
-    <nav>
+    <nav >
       <a routerLink="/dashboard">Dashboard</a>
       <a routerLink="/trades">Trades</a>
       <a routerLink="/about">About</a>
