--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer class="footer" role="banner">
 
-  <span>	&copy; Olga Toltinova 2021</span>
+  <span class="copyright">	&copy; Olga Toltinova 2021</span>
   <div class="spacer"></div>
 
 </footer>
