rounded corners for cards through separated css for each card component

--- a/src/app/about-detail/about-detail.component.html
+++ b/src/app/about-detail/about-detail.component.html
@@ -1,4 +1,4 @@
-<h3>About MBot</h3>
+<mat-card><h3>About MBot</h3>
 
 <p>The MBot is a cryptocurrency bot, capable of trading many cryptocurrencies at runtime. It depends on the GitHub open source project Zenbot, mainly maintained by the developer DeviaVir, which makes automated cryptocurrency trading possible.
   Where the Zenbot is only capable of trading one cryptocurrency trading pair, the MBot, which consists of many Zenbots, renders multiple trading pairs possible.
@@ -21,3 +21,4 @@ optionally Java, Angular, Figma, AfterEffects, Lottie, HTML, CSS
   <li>Maintainer of the Github Open Source ZenBot project </li>
 </ul>
 <button>Visit project page</button>
+</mat-card>
