--- a/src/app/trades-detail/trades-detail.component.html
+++ b/src/app/trades-detail/trades-detail.component.html
@@ -1,4 +1,4 @@
-
+<mat-card class="mat-card">
 <p>{{ left }}/{{ right }}</p>
 
 <ul class="trades">
@@ -8,3 +8,4 @@
 </ul>
 
 <p>{{ message }}</p>
+</mat-card>
