--- a/src/styles.css
+++ b/src/styles.css
@@ -25,7 +25,9 @@
   a:hover {
     color: #125699;
   }
-
+body {
+  background-color: #F9F9F9;
+}
   .content {
     margin-top: 60px;
     display: flex;
@@ -49,20 +51,20 @@
   }
 
   .card {
-    border-radius: 20px;
-    border: 1px solid #eee;
-    background-color: #fafafa;
-    height: auto;
-    width: 200px;
-    margin: 0 8px 16px;
-    padding: 16px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    transition: all 0.2s ease-in-out;
-    line-height: 24px;
-  }
+      border-radius: 20px;
+      border: 1px solid #eee;
+      background-color: white;
+      height: auto;
+      width: 200px;
+      margin: 0 8px 16px;
+      padding: 16px;
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+      transition: all 0.2s ease-in-out;
+      line-height: 24px;
+    }
 
   .card-container .card:not(:last-child) {
     margin-right: 0;
