--- a/src/app/dashboard-balance/dashboard-balance.component.html
+++ b/src/app/dashboard-balance/dashboard-balance.component.html
@@ -2,6 +2,7 @@
 <div class="card-container">
   <mat-card class="card" target="_blank" rel="noopener">
       <mat-card-title>Total</mat-card-title>
+    <mat-divider></mat-divider>
     <app-diagram></app-diagram>
     <div class="card-container">
       <p>BTC: {{amount}}</p>
