--- a/src/app/dashboard-performance/dashboard-performance.component.html
+++ b/src/app/dashboard-performance/dashboard-performance.component.html
@@ -1,6 +1,7 @@
 <div class="card-container">
   <mat-card class="card" target="_blank" rel="noopener">
     <mat-card-title>Performance</mat-card-title>
+    <mat-divider></mat-divider>
     <span>Total</span>
   </mat-card>
 </div>
