--- a/src/app/dashboard-trades/dashboard-trades.component.html
+++ b/src/app/dashboard-trades/dashboard-trades.component.html
@@ -1,8 +1,9 @@
 <div class="card-container">
   <mat-card class="card" target="_blank" rel="noopener">
     <mat-card-title>Trades</mat-card-title>
+    <mat-divider></mat-divider>
     <app-trades-detail [left]="left1" [right]="right1"></app-trades-detail>
     <app-trades-detail [left]="left1" [right]="right1"></app-trades-detail>
-    <span>Total</span>
+
   </mat-card>
 </div>
