--- a/src/app/trades-detail/trades-detail.component.css
+++ b/src/app/trades-detail/trades-detail.component.css
@@ -4,6 +4,6 @@
     flex-wrap: wrap;
     justify-content: center;
     width: auto;
-    margin: 0 8px 16px;
+    margin: 32px 8px 16px;
     padding: 16px;
 }
