--- a/src/app/dashboard-generic/dashboard-generic.component.css
+++ b/src/app/dashboard-generic/dashboard-generic.component.css
@@ -176,7 +176,7 @@
     box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
   }
 
-  svg#clouds {
+  svg#coin {
     position: fixed;
     bottom: -160px;
     left: -230px;
