added anchor buttons without links, adjusted the column width for cards

--- a/src/app/dashboard-performance/dashboard-performance.component.html
+++ b/src/app/dashboard-performance/dashboard-performance.component.html
@@ -2,6 +2,9 @@
   <mat-card class="card" target="_blank" rel="noopener">
     <mat-card-title>Performance</mat-card-title>
     <mat-divider></mat-divider>
-    <span>Total</span>
+    <div class="card-container">
+      <a mat-raised-button color ="accent" >Adjust the strategy</a>
+    </div>
+
   </mat-card>
 </div>
