--- a/src/app/dashboard-trades/dashboard-trades.component.html
+++ b/src/app/dashboard-trades/dashboard-trades.component.html
@@ -4,6 +4,9 @@
     <mat-divider></mat-divider>
     <app-trades-detail [left]="left1" [right]="right1"></app-trades-detail>
     <app-trades-detail [left]="left1" [right]="right1"></app-trades-detail>
+    <div class="card-container">
+      <a mat-raised-button color ="accent" >Show all</a>
+    </div>
 
   </mat-card>
 </div>
