--- a/src/app/about-detail/about-detail.component.html
+++ b/src/app/about-detail/about-detail.component.html
@@ -1,24 +1,25 @@
-<mat-card><h3>About MBot</h3>
+<mat-card>
+  <h3>About MBot</h3>
 
-<p>The MBot is a cryptocurrency bot, capable of trading many cryptocurrencies at runtime. It depends on the GitHub open source project Zenbot, mainly maintained by the developer DeviaVir, which makes automated cryptocurrency trading possible.
-  Where the Zenbot is only capable of trading one cryptocurrency trading pair, the MBot, which consists of many Zenbots, renders multiple trading pairs possible.
-  Simply put, the MBot is a docker-compose stack of n Zenbots, where n is the desired amount of trading pairs.</p>
+  <p>The MBot is a cryptocurrency bot, capable of trading many cryptocurrencies at runtime. It depends on the GitHub open source project Zenbot, mainly maintained by the developer DeviaVir, which makes automated cryptocurrency trading possible.
+    Where the Zenbot is only capable of trading one cryptocurrency trading pair, the MBot, which consists of many Zenbots, renders multiple trading pairs possible.
+    Simply put, the MBot is a docker-compose stack of n Zenbots, where n is the desired amount of trading pairs.</p>
 
-<h4>Technologies and Tools: </h4>
+  <h4>Technologies and Tools: </h4>
 
-<p>Git, GitHub, Markdown, Docker/Docker-Compose, Windows, Linux, IntelliJ, MongoDB, JavaScript, either REST or GraphQL,
-optionally Java, Angular, Figma, AfterEffects, Lottie, HTML, CSS
-</p>
+  <p>Git, GitHub, Markdown, Docker/Docker-Compose, Windows, Linux, IntelliJ, MongoDB, JavaScript, either REST or GraphQL,
+  optionally Java, Angular, Figma, AfterEffects, Lottie, HTML, CSS
+  </p>
 
-<h4>Team:</h4>
+  <h4>Team:</h4>
 
-<ul>
-  <li>Olga Toltinova</li>
-  <li>User Interface/ Frontend Developer (UI/FE) </li>
-  <li>External Team (1) </li>
-  <li>Backend Developer / Project Manager (BE/PM) </li>
-  <li>DeviaVir </li>
-  <li>Maintainer of the Github Open Source ZenBot project </li>
-</ul>
-<button>Visit project page</button>
+  <ul>
+    <li>Olga Toltinova</li>
+    <li>User Interface/ Frontend Developer (UI/FE) </li>
+    <li>External Team (1) </li>
+    <li>Backend Developer / Project Manager (BE/PM) </li>
+    <li>DeviaVir </li>
+    <li>Maintainer of the Github Open Source ZenBot project </li>
+  </ul>
+  <a mat-raised-button color ="accent" >Visit the project page</a>
 </mat-card>
