--- a/src/app/diagram/diagram.component.html
+++ b/src/app/diagram/diagram.component.html
@@ -1,2 +1,9 @@
 <p>diagram works!</p>
-<svg class="material-icons" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"/></svg>
+<ngx-charts-pie-chart
+  [labels]="false"
+  [legendTitle]="'Total'"
+  [legend]="false"
+  [results]="tradeData"
+  [view]="[200,200]"
+>
+</ngx-charts-pie-chart>
