--- a/src/app/about-detail/about-detail.component.html
+++ b/src/app/about-detail/about-detail.component.html
@@ -1,3 +1,4 @@
+<div class="content">
 <mat-card class="mat-card">
   <mat-card-title>About Mbot</mat-card-title>
   <mat-divider></mat-divider>
@@ -11,7 +12,7 @@
       <p>Git, GitHub, Markdown, Docker/Docker-Compose, Windows, Linux, IntelliJ, MongoDB, JavaScript, either REST or GraphQL,
         optionally Java, Angular, Figma, AfterEffects, Lottie, HTML, CSS
       </p>
-      <h2>Team:</h2>
+      <mat-card-title>Team:</mat-card-title>
 
       <ul>
         <li>Olga Toltinova</li>
@@ -30,3 +31,4 @@
 
 
 </mat-card>
+</div>
