--- a/src/app/dashboard-balance/dashboard-balance.component.html
+++ b/src/app/dashboard-balance/dashboard-balance.component.html
@@ -5,9 +5,9 @@
     <mat-divider></mat-divider>
     <app-diagram></app-diagram>
     <div class="card-container">
-      <p>BTC: {{amount}}</p>
-      <p>ETH: {{amount}}</p>
-      <p>ETC: {{amount}}</p>
+      <p>BTC: {{amount.percentage.btc}}</p>
+      <p>ETH: {{amount.percentage.eth}}</p>
+      <p>ETC: {{amount.percentage.etc}}</p>
     </div>
   </mat-card>
   </div>
