added a table in trades

--- a/src/app/trades/trades.component.html
+++ b/src/app/trades/trades.component.html
@@ -1,5 +1,6 @@
 <div class="content" role="main">
   <h2>My Trades</h2>
+  <app-trades-detail-table></app-trades-detail-table>
   <app-trades-detail [left]="left1" [right]="right1"></app-trades-detail>
   <app-trades-detail [left]="left2" [right]="right2"></app-trades-detail>
   <app-trades-detail [left]="left3" [right]="right3"></app-trades-detail>
