--- a/src/app/trades/trades.component.css
+++ b/src/app/trades/trades.component.css
@@ -6,3 +6,7 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
   }
+  .container {
+    margin: 82px auto 32px;
+    max-width: 1260px;
+  }
