--- a/src/app/trades-detail-table/trades-detail-table.component.html
+++ b/src/app/trades-detail-table/trades-detail-table.component.html
@@ -1,25 +1,25 @@
-<div class="mat-elevation-z8">
+<div class="mat-card">
   <table mat-table [dataSource]="dataSource">
 
-    <!-- Position Column -->
+    <!-- Id Column -->
     <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef> Id </th>
       <td mat-cell *matCellDef="let trade"> {{trade.id}} </td>
     </ng-container>
 
-    <!-- Name Column -->
+    <!-- Currency Column -->
     <ng-container matColumnDef="currency">
       <th mat-header-cell *matHeaderCellDef> Currency </th>
       <td mat-cell *matCellDef="let trade"> {{trade.currency}} </td>
     </ng-container>
 
-    <!-- Weight Column -->
+    <!-- Amount Column -->
     <ng-container matColumnDef="amount">
       <th mat-header-cell *matHeaderCellDef> Amount </th>
       <td mat-cell *matCellDef="let trade"> {{trade.amount}} </td>
     </ng-container>
 
-    <!-- Symbol Column -->
+    <!-- Timestamp Column -->
     <ng-container matColumnDef="timestamp">
       <th mat-header-cell *matHeaderCellDef> Timestamp </th>
       <td mat-cell *matCellDef="let trade"> {{trade.timestamp}} </td>
@@ -29,5 +29,5 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
 
-  <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+  <mat-paginator [pageSizeOptions]="[5, 10, 20]"></mat-paginator>
 </div>
