changed the table style to borderless, used outer card container in dashboard trades to display the table

--- a/src/app/trades/trades.component.html
+++ b/src/app/trades/trades.component.html
@@ -1,4 +1,6 @@
   <div class="container">
-  <h2>My Trades</h2>
-  <app-trades-detail-table></app-trades-detail-table>
+    <h2>My Trades</h2>
+    <div class="mat-card">
+      <app-trades-detail-table></app-trades-detail-table>
+    </div>
   </div>
