--- a/src/app/dashboard-trades/dashboard-trades.component.html
+++ b/src/app/dashboard-trades/dashboard-trades.component.html
@@ -2,8 +2,9 @@
   <mat-card class="card" target="_blank" rel="noopener">
     <mat-card-title>Trades</mat-card-title>
     <mat-divider></mat-divider>
-    <app-trades-detail [left]="left1" [right]="right1"></app-trades-detail>
-    <app-trades-detail [left]="left1" [right]="right1"></app-trades-detail>
+    <div class="card-container">
+      <app-trades-detail-table></app-trades-detail-table>
+    </div>
     <div class="card-container">
       <a mat-raised-button color ="accent" >Show all</a>
     </div>
