--- a/src/app/trades-detail-table/trades-detail-table.component.html
+++ b/src/app/trades-detail-table/trades-detail-table.component.html
@@ -1,5 +1,5 @@
-<div class="mat-card">
-  <table mat-table [dataSource]="dataSource">
+
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z0">
 
     <!-- Id Column -->
     <ng-container matColumnDef="id">
@@ -30,4 +30,4 @@
   </table>
 
   <mat-paginator [pageSizeOptions]="[5, 10, 20]"></mat-paginator>
-</div>
+
