used a new css reference to add round borders to the table in trades

--- a/src/app/trades/trades.component.html
+++ b/src/app/trades/trades.component.html
@@ -1,6 +1,6 @@
   <div class="container">
-    <h2>My Trades</h2>
-    <div class="mat-card">
+    <mat-card-title>My Trades</mat-card-title>
+    <div>
       <app-trades-detail-table></app-trades-detail-table>
     </div>
   </div>
