--- a/src/app/trades/trades.component.css
+++ b/src/app/trades/trades.component.css
@@ -7,6 +7,10 @@
     -moz-osx-font-smoothing: grayscale;
   }
   .container {
+    border: 1px solid #eee;
+    background-color: white;
+    border-radius: 20px;
     margin: 82px auto 32px;
+    padding: 32px;
     max-width: 1260px;
   }
