removed the templated css from cards, fixed the flexible screen sizes

--- a/src/app/dashboard-performance/dashboard-performance.component.html
+++ b/src/app/dashboard-performance/dashboard-performance.component.html
@@ -1,10 +1,11 @@
-<div class="card-container">
-  <mat-card class="card" target="_blank" rel="noopener">
-    <mat-card-title>Performance</mat-card-title>
-    <mat-divider></mat-divider>
-    <div class="card-container">
-      <a mat-raised-button color ="accent" >Adjust the strategy</a>
-    </div>
 
+  <mat-card class="card-test">
+    <mat-card-title>Performance</mat-card-title>
+    <mat-card-content>
+      <mat-divider></mat-divider>
+    </mat-card-content>
+    <mat-card-actions style="text-align: center;">
+      <a mat-raised-button color ="accent" >Adjust the strategy</a>
+    </mat-card-actions>
   </mat-card>
-</div>
+
