--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,7 +1,10 @@
 <div class="content" role="main">
-  <div class="card-container">
-    <app-dashboard-balance></app-dashboard-balance>
-    <app-dashboard-performance></app-dashboard-performance>
-    <app-dashboard-trades></app-dashboard-trades>
+  <div class="card-container" align="center">
+
+      <div class="column"><app-dashboard-balance></app-dashboard-balance></div>
+      <div class="column"><app-dashboard-performance></app-dashboard-performance></div>
+      <div class="column"><app-dashboard-trades></app-dashboard-trades></div>
+
+
   </div>
 </div>
