--- a/src/app/dashboard-balance/dashboard-balance.component.html
+++ b/src/app/dashboard-balance/dashboard-balance.component.html
@@ -1,14 +1,15 @@
 
-<div class="card-container">
-  <mat-card class="card" target="_blank" rel="noopener">
+  <mat-card class="card-test">
       <mat-card-title>Total Balance</mat-card-title>
     <mat-divider></mat-divider>
-    <app-diagram></app-diagram>
-    <div class="card-container">
+    <app-diagram class="row"></app-diagram>
+
       <p>BTC: {{totalBalance.percentage.btc}}</p>
       <p>ETH: {{totalBalance.percentage.eth}}</p>
       <p>ETC: {{totalBalance.percentage.etc}}</p>
-    </div>
+      <h2>Total</h2>
+      <p>{{totalBalance.total.usd}} USDt</p>
+
   </mat-card>
-  </div>
+
 
