--- a/src/app/dashboard-trades/dashboard-trades.component.html
+++ b/src/app/dashboard-trades/dashboard-trades.component.html
@@ -1,13 +1,13 @@
-<div class="card-container">
-  <mat-card class="card" target="_blank" rel="noopener">
+
+  <mat-card class="card-test">
+    <mat-card-content>
     <mat-card-title>Trades</mat-card-title>
     <mat-divider></mat-divider>
-    <div class="card-container">
       <app-trades-detail-table></app-trades-detail-table>
-    </div>
-    <div class="card-container">
-      <a mat-raised-button color ="accent" >Show all</a>
-    </div>
 
-  </mat-card>
-</div>
+    <mat-card-actions style="text-align: center;">
+      <a mat-raised-button color ="accent" >Show All</a>
+    </mat-card-actions>
+
+    </mat-card-content>
+</mat-card>
