--- a/src/styles.css
+++ b/src/styles.css
@@ -25,6 +25,9 @@
   a:hover {
     color: #125699;
   }
+
+
+
 body {
   background-color: #F9F9F9;
 }
@@ -45,6 +48,21 @@ body {
     align-items: center;
   }
 
+.card-test{
+ min-width: 350px;
+ min-height: 500px;
+}
+.column {
+  float: left;
+  padding: 10px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
 .card svg.material-icons path {
     fill: #888;
   }
