--- a/src/app/dashboard-performance/dashboard-performance.component.html
+++ b/src/app/dashboard-performance/dashboard-performance.component.html
@@ -1,5 +1,5 @@
 
-  <mat-card class="card-test">
+  <mat-card id="rcorners" class="card-test">
     <mat-card-title>Performance</mat-card-title>
     <mat-card-content>
       <mat-divider></mat-divider>
