--- a/src/app/dashboard-trades/dashboard-trades.component.html
+++ b/src/app/dashboard-trades/dashboard-trades.component.html
@@ -1,5 +1,5 @@
 
-  <mat-card class="card-test">
+  <mat-card id="rcorners" class="card-test">
     <mat-card-content>
     <mat-card-title>Trades</mat-card-title>
     <mat-divider></mat-divider>
