--- a/src/app/about-detail/about-detail.component.html
+++ b/src/app/about-detail/about-detail.component.html
@@ -1,12 +1,12 @@
-<div class="content">
-<mat-card class="mat-card">
+<mat-card id="rcorners" class="card-test">
   <mat-card-title>About Mbot</mat-card-title>
   <mat-divider></mat-divider>
-  <div class="card-container">
+
+  <mat-card-content>
     <p>The MBot is a cryptocurrency bot, capable of trading many cryptocurrencies at runtime. It depends on the GitHub open source project Zenbot, mainly maintained by the developer DeviaVir, which makes automated cryptocurrency trading possible.
     Where the Zenbot is only capable of trading one cryptocurrency trading pair, the MBot, which consists of many Zenbots, renders multiple trading pairs possible.
     Simply put, the MBot is a docker-compose stack of n Zenbots, where n is the desired amount of trading pairs.</p>
-    <div>
+
       <mat-card-title>Technologies and Tools:</mat-card-title>
 
       <p>Git, GitHub, Markdown, Docker/Docker-Compose, Windows, Linux, IntelliJ, MongoDB, JavaScript, either REST or GraphQL,
@@ -23,12 +23,6 @@
         <li>Maintainer of the Github Open Source ZenBot project </li>
       </ul>
       <a mat-raised-button color ="accent" >Visit the project page</a>
-    </div>
 
-  </div>
-
-
-
-
+  </mat-card-content>
 </mat-card>
-</div>
