--- a/src/styles.css
+++ b/src/styles.css
@@ -49,6 +49,7 @@ body {
   }
 #rcorners {
   border-radius: 20px;
+   padding:24px;
 }
 .card-test{
  min-width: 350px;
@@ -73,8 +74,7 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    margin-top: 16px;
-    margin-bottom: 16px;
+
   }
 
   .card {
