--- a/src/app/about-detail/about-detail.component.css
+++ b/src/app/about-detail/about-detail.component.css
@@ -1,5 +1,8 @@
-mat-card {
-border-radius: 20px;
-      border: 1px solid #eee;
-      background-color: white;
-}
+.container {
+    border: 1px solid #eee;
+    background-color: white;
+    border-radius: 20px;
+    margin: 82px auto 32px;
+    padding: 32px;
+    max-width: 1260px;
+  }
