removed old CSS, made use of flex instead of a row in a dashboard

--- a/src/app/dashboard-balance/dashboard-balance.component.html
+++ b/src/app/dashboard-balance/dashboard-balance.component.html
@@ -4,9 +4,9 @@
     <mat-divider></mat-divider>
     <app-diagram class="row"></app-diagram>
     <div class="row">
-      <div class="column-text"><p>BTC: {{totalBalance.percentage.btc}}</p></div>
-      <div class="column-text"><p>ETH: {{totalBalance.percentage.eth}}</p></div>
-      <div class="column-text"><p>ETC: {{totalBalance.percentage.etc}}</p></div>
+      <div class="column-text"><p>BTC: {{totalBalance.percentage.btc}}%</p></div>
+      <div class="column-text"><p>ETH: {{totalBalance.percentage.eth}}%</p></div>
+      <div class="column-text"><p>ETC: {{totalBalance.percentage.etc}}%</p></div>
     </div>
       <h2>Total</h2>
       <p>{{totalBalance.total.usd}} USDt</p>
