--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,10 +1,8 @@
 <div class="content" role="main">
-  <div class="card-container" align="center">
-
+  <div class="flex-container" align="center">
       <div class="column"><app-dashboard-balance></app-dashboard-balance></div>
       <div class="column"><app-dashboard-performance></app-dashboard-performance></div>
       <div class="column"><app-dashboard-trades></app-dashboard-trades></div>
 
-
-  </div>
+</div>
 </div>
