--- a/src/styles.css
+++ b/src/styles.css
@@ -31,6 +31,7 @@
 body {
   background-color: #F9F9F9;
 }
+
  svg#coin {
     position: fixed;
     bottom: -160px;
@@ -38,44 +39,51 @@ body {
     z-index: -10;
     width: 1920px;
   }
-  .content {
-    margin-top: 60px;
-    display: flex;
-    margin: 82px auto 32px;
-    padding: 0 16px;
-    max-width: 1260px;
-    flex-direction: column;
-    align-items: center;
-  }
+
+.content {
+  display: flex;
+  margin: 80px auto 80px;
+  padding: 0 16px;
+  max-width: 1260px;
+  flex-direction: column;
+  justify-content:center;
+}
+
 #rcorners {
   border-radius: 30px;
    padding:24px;
 }
+
 .card-test{
  min-width: 350px;
  min-height: 500px;
 }
+
 .card-test:hover {
-    transform: translateY(-3px);
-    box-shadow: 0 4px 17px rgba(0, 0, 0, 0.35);
-  }
-  .card-test:active {
-      transform: translateY(3px);
-      box-shadow: 0 1px 0px rgba(0, 0, 0, 0.1)
+  transform: translateY(-3px);
+  box-shadow: 0 4px 17px rgba(0, 0, 0, 0.35);
+}
 
-    }
+.card-test:active {
+  transform: translateY(3px);
+  box-shadow: 0 1px 0px rgba(0, 0, 0, 0.1)
 
+}
+
+.flex-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content:center;
+}
 .column {
   float: left;
   padding: 10px;
-  margin-bottom: 20px;
 }
 .column-text {
   float: left;
   width: 33.33%;
 }
 
-/* Clear floats after the columns */
 .row:after {
   content: "";
   display: table;
@@ -112,53 +120,7 @@ body {
     margin-right: 0;
   }
 
-  .card.card-small {
-    height: 16px;
-    width: 168px;
-  }
-
-  .card-container .card:not(.highlight-card) {
-    cursor: pointer;
-  }
-
-  .card-container .card:not(.highlight-card):hover {
-    transform: translateY(-3px);
-    box-shadow: 0 4px 17px rgba(0, 0, 0, 0.35);
-  }
-
   .card-container .card:not(.highlight-card):hover .material-icons path {
     fill: rgb(105, 103, 103);
   }
 
-  .card.highlight-card {
-    background-color: #1976d2;
-    color: white;
-    font-weight: 600;
-    border: none;
-    width: auto;
-    min-width: 30%;
-    position: relative;
-  }
-
-  .card.card.highlight-card span {
-    margin-left: 60px;
-  }
-
-   /* Responsive Styles */
-    @media screen and (max-width: 767px) {
-
-      .card-container > *:not(.circle-link) ,
-      .terminal {
-        width: 100%;
-      }
-
-      .card:not(.highlight-card) {
-        height: 16px;
-        margin: 8px 0;
-      }
-
-      .card.highlight-card span {
-        margin-left: 72px;
-      }
-
-    }
