--- a/src/app/dashboard-balance/dashboard-balance.component.html
+++ b/src/app/dashboard-balance/dashboard-balance.component.html
@@ -8,9 +8,10 @@
       <div class="column-text"><p>ETH: {{totalBalance.percentage.eth}}%</p></div>
       <div class="column-text"><p>ETC: {{totalBalance.percentage.etc}}%</p></div>
     </div>
-      <h2>Total</h2>
-      <p>{{totalBalance.total.usd}} USDt</p>
-
+    <mat-card-actions>
+      <p>Total</p>
+      <h2>{{totalBalance.total.usd}} USDt</h2>
+    </mat-card-actions>
   </mat-card>
 
 
