--- a/src/app/dashboard-performance/dashboard-performance.component.html
+++ b/src/app/dashboard-performance/dashboard-performance.component.html
@@ -3,6 +3,9 @@
     <mat-card-title>Performance</mat-card-title>
     <mat-card-content>
       <mat-divider></mat-divider>
+      <p>{{performance.growth}}</p>
+      <p>{{performance.compared}}</p>
+      <p>{{performance.total}}</p>
     </mat-card-content>
     <mat-card-actions style="text-align: center;">
       <a mat-raised-button color ="accent" >Adjust the strategy</a>
