--- a/src/app/dashboard-performance/dashboard-performance.component.html
+++ b/src/app/dashboard-performance/dashboard-performance.component.html
@@ -1,11 +1,13 @@
-
-  <mat-card id="rcorners" class="card-test">
-    <mat-card-title>Performance</mat-card-title>
-    <mat-card-content>
-      <mat-divider></mat-divider>
-    </mat-card-content>
-    <mat-card-actions style="text-align: center;">
-      <a mat-raised-button color ="accent" >Adjust the strategy</a>
-    </mat-card-actions>
-  </mat-card>
+<mat-card id="rcorners" class="card-test">
+  <mat-card-title>Performance</mat-card-title>
+  <mat-card-content>
+    <mat-divider></mat-divider>
+    <p>12{{performance.total}}</p>
+    <p>36</p>
+    <p>48</p>
+  </mat-card-content>
+  <mat-card-actions style="text-align: center;">
+    <a mat-raised-button color ="accent" >Adjust the strategy</a>
+  </mat-card-actions>
+</mat-card>
 
