--- a/src/app/dashboard-performance/dashboard-performance.component.html
+++ b/src/app/dashboard-performance/dashboard-performance.component.html
@@ -1,12 +1,18 @@
-<mat-card id="rcorners" class="card-test">
+<mat-card id="rcorners" class="card-test" style="text-align: center;">
   <mat-card-title>Performance</mat-card-title>
+  <mat-divider></mat-divider>
   <mat-card-content>
-    <mat-divider></mat-divider>
-    <p>12{{performance.total}}</p>
-    <p>36</p>
-    <p>48</p>
+    <div class="content">
+    <p>Since the start of the MBot:</p>
+    <h3>Assets growth</h3>
+    <h1>+{{performance.growth}}%</h1>
+    <h3>Compared to Buyhold</h3>
+    <h1>+ {{performance.compared}} USDt</h1>
+      <h3>Total</h3>
+      <h1>+{{performance.total}} USDt</h1>
+    </div>
   </mat-card-content>
-  <mat-card-actions style="text-align: center;">
+  <mat-card-actions >
     <a mat-raised-button color ="accent" >Adjust the strategy</a>
   </mat-card-actions>
 </mat-card>
