--- a/src/app/diagram/diagram.component.html
+++ b/src/app/diagram/diagram.component.html
@@ -7,5 +7,6 @@
   [legendPosition]="legendPosition"
   [labels]="showLabels"
   [doughnut]="isDoughnut"
+  [tooltipDisabled]="tooltipDisabled"
 >
 </ngx-charts-pie-chart>
