added material icons, replaced font family in trades

--- a/src/app/dashboard-balance/dashboard-balance.component.html
+++ b/src/app/dashboard-balance/dashboard-balance.component.html
@@ -1,5 +1,6 @@
 
   <mat-card id="rcorners" class="card-test">
+      <mat-icon>info</mat-icon>
       <mat-card-title>Total Balance</mat-card-title>
     <mat-divider></mat-divider>
     <app-diagram class="row"></app-diagram>
