--- a/src/app/dashboard-performance/dashboard-performance.component.html
+++ b/src/app/dashboard-performance/dashboard-performance.component.html
@@ -1,5 +1,8 @@
 <mat-card id="rcorners" class="card-test" style="text-align: center;">
+
+  <mat-icon>info</mat-icon>
   <mat-card-title>Performance</mat-card-title>
+
   <mat-divider></mat-divider>
   <mat-card-content>
     <div class="content">
@@ -12,7 +15,7 @@
       <h1>+{{performance.total}} USDt</h1>
     </div>
   </mat-card-content>
-  <mat-card-actions >
+  <mat-card-actions>
     <a mat-raised-button color ="accent" >Adjust the strategy</a>
   </mat-card-actions>
 </mat-card>
