--- a/src/app/dashboard-trades/dashboard-trades.component.html
+++ b/src/app/dashboard-trades/dashboard-trades.component.html
@@ -1,6 +1,7 @@
 
   <mat-card id="rcorners" class="card-test">
     <mat-card-content>
+    <mat-icon>info</mat-icon>
     <mat-card-title>Trades</mat-card-title>
     <mat-divider></mat-divider>
       <app-trades-detail-table></app-trades-detail-table>
