--- a/src/app/about-detail/about-detail.component.html
+++ b/src/app/about-detail/about-detail.component.html
@@ -22,7 +22,7 @@
         <li>DeviaVir </li>
         <li>Maintainer of the Github Open Source ZenBot project </li>
       </ul>
-      <a mat-raised-button color ="accent">Visit the project page</a>
+      <a mat-raised-button color ="accent" href="https://github.com/DeviaVir/zenbot">Visit the project page</a>
 
   </mat-card-content>
 </mat-card>
