removed round corners from ids

--- a/src/app/about-detail/about-detail.component.html
+++ b/src/app/about-detail/about-detail.component.html
@@ -1,4 +1,4 @@
-<mat-card id="rcorners" class="card-test">
+<mat-card class="card-test">
   <mat-card-title>About Mbot</mat-card-title>
   <mat-divider></mat-divider>
 
