--- a/src/app/dashboard-performance/dashboard-performance.component.html
+++ b/src/app/dashboard-performance/dashboard-performance.component.html
@@ -1,4 +1,4 @@
-<mat-card id="rcorners" class="card-test" style="text-align: center;">
+<mat-card class="card-test" style="text-align: center;">
   <mat-icon>info</mat-icon>
   <mat-card-title>Performance</mat-card-title>
 
