--- a/src/app/adjust-strategy/adjust-strategy.component.html
+++ b/src/app/adjust-strategy/adjust-strategy.component.html
@@ -1,5 +1,5 @@
 <div class="content" role="main">
-<mat-card id="rcorners" class="card-test">
+<mat-card class="card-test">
   <mat-card-title>Adjusting the strategy</mat-card-title>
   <mat-divider></mat-divider>
 
