--- a/src/app/dashboard-balance/dashboard-balance.component.html
+++ b/src/app/dashboard-balance/dashboard-balance.component.html
@@ -1,5 +1,5 @@
 
-  <mat-card id="rcorners" class="card-test">
+  <mat-card class="card-test">
       <mat-icon>info</mat-icon>
       <mat-card-title>Total Balance</mat-card-title>
     <mat-divider></mat-divider>
