--- a/src/app/dashboard-trades/dashboard-trades.component.html
+++ b/src/app/dashboard-trades/dashboard-trades.component.html
@@ -1,5 +1,5 @@
 
-  <mat-card id="rcorners" class="card-test">
+  <mat-card class="card-test rcorners">
     <mat-card-content>
     <mat-icon>info</mat-icon>
     <mat-card-title>Trades</mat-card-title>
