added custom palette to scss file, successfully used it

--- a/src/my-theme.scss
+++ b/src/my-theme.scss
@@ -2,10 +2,41 @@
 
 @include mat-core();
 
+$md-mbot: (
+    50 : #e2e4e7,
+    100 : #b7bac2,
+    200 : #888d9a,
+    300 : #585f72,
+    400 : #343c53,
+    500 : #101a35,
+    600 : #0e1730,
+    700 : #0c1328,
+    800 : #090f22,
+    900 : #050816,
+    A100 : #5767ff,
+    A200 : #2439ff,
+    A400 : #0017f0,
+    A700 : #0015d6,
+    contrast: (
+        50 : #000000,
+        100 : #000000,
+        200 : #000000,
+        300 : #ffffff,
+        400 : #ffffff,
+        500 : #ffffff,
+        600 : #ffffff,
+        700 : #ffffff,
+        800 : #ffffff,
+        900 : #ffffff,
+        A100 : #ffffff,
+        A200 : #ffffff,
+        A400 : #ffffff,
+        A700 : #ffffff,
+    )
+);
 
-
-$my-theme-primary: mat-palette($mat-grey);
-$my-theme-accent: mat-palette($mat-orange);
+$my-theme-primary: mat-palette($mat-orange);
+$my-theme-accent: mat-palette($md-mbot);
 
 $my-theme: mat-light-theme($my-theme-primary, $my-theme-accent);
 
