added orange styling to h1 and h2 in global css

--- a/src/app/dashboard-performance/dashboard-performance.component.html
+++ b/src/app/dashboard-performance/dashboard-performance.component.html
@@ -1,6 +1,6 @@
 <mat-card class="card-test" style="text-align: center;">
   <mat-icon>info</mat-icon>
-  <mat-card-title>Performance</mat-card-title>
+  <mat-card-title>PERFORMANCE</mat-card-title>
 
   <mat-divider></mat-divider>
   <mat-card-content>
