--- a/src/app/dashboard-trades/dashboard-trades.component.html
+++ b/src/app/dashboard-trades/dashboard-trades.component.html
@@ -2,7 +2,7 @@
   <mat-card class="card-test rcorners">
     <mat-card-content>
     <mat-icon>info</mat-icon>
-    <mat-card-title>Trades</mat-card-title>
+    <mat-card-title>TRADES</mat-card-title>
     <mat-divider></mat-divider>
       <app-trades-detail-table></app-trades-detail-table>
 
