--- a/src/app/dashboard-balance/dashboard-balance.component.html
+++ b/src/app/dashboard-balance/dashboard-balance.component.html
@@ -1,7 +1,7 @@
 
   <mat-card class="card-test">
       <mat-icon>info</mat-icon>
-      <mat-card-title>Total Balance</mat-card-title>
+      <mat-card-title>TOTAL BALANCE</mat-card-title>
     <mat-divider></mat-divider>
     <app-diagram class="row"></app-diagram>
     <div class="row">
