--- a/src/my-theme.scss
+++ b/src/my-theme.scss
@@ -1,6 +1,11 @@
 @import '~@angular/material/theming';
 
-@include mat-core();
+$custom-typography: mat-typography-config(
+$font-family: 'Nunito+Sans',
+$title: mat-typography-level(24px,32px, bold)
+);
+@include mat-core($custom-typography);
+
 
 $md-mbot: (
     50 : #e2e4e7,
