--- a/src/app/dashboard-balance/dashboard-balance.component.html
+++ b/src/app/dashboard-balance/dashboard-balance.component.html
@@ -21,7 +21,7 @@
     </div>
 
     <mat-card-actions>
-      <p>Total</p>
+      <h3>Total</h3>
       <h2>{{totalBalance.total.usd}} USDt</h2>
     </mat-card-actions>
   </mat-card>
