--- a/src/styles.css
+++ b/src/styles.css
@@ -8,7 +8,8 @@
     h4,
     h5,
     h6 {
-      margin: 16px;
+      padding: 8px 8px;
+      margin: 8px;
 
     }
     h1,
@@ -49,7 +50,7 @@ body {
 .content {
   display: flex;
   margin: 80px auto 80px;
-  padding: 0 16px;
+  padding: 16px 16px;
   max-width: 1260px;
   flex-direction: column;
   justify-content:center;
