--- a/src/app/trades/trades.component.html
+++ b/src/app/trades/trades.component.html
@@ -1,10 +1,10 @@
-<div class="container">
-
+<div class="content">
+<mat-card>
   <mat-card-title>My Trades</mat-card-title>
 
   <div>
     <app-trades-detail-table></app-trades-detail-table>
   </div>
-
+</mat-card>
 </div>
 
