--- a/src/app/dashboard-performance/dashboard-performance.component.html
+++ b/src/app/dashboard-performance/dashboard-performance.component.html
@@ -1,7 +1,10 @@
-<mat-card class="card-test" style="text-align: center;">
-  <mat-icon>info</mat-icon>
-  <mat-card-title>PERFORMANCE</mat-card-title>
+<mat-card class="card-test">
+  <mat-card-header>
 
+    <mat-icon mat-card-avatar>info</mat-icon>
+
+    <mat-card-title>PERFORMANCE</mat-card-title>
+  </mat-card-header>
   <mat-divider></mat-divider>
   <mat-card-content>
     <div class="content">
