--- a/src/styles.css
+++ b/src/styles.css
@@ -85,6 +85,12 @@
   color: #CED2D2;
 
 }
+mat-icon.mat-card-avatar {
+  padding: 10px;
+  width: 60px;
+  height: 60px;
+  font-size: 60px;
+}
 
   .card-container {
     display: flex;
@@ -109,3 +115,6 @@
       line-height: 24px;
     }
 
+  .mat-card-title {
+    margin-top: 20px;
+  }
