aligned icons to the left

--- a/src/app/about-detail/about-detail.component.html
+++ b/src/app/about-detail/about-detail.component.html
@@ -1,5 +1,10 @@
 <mat-card class="card-test">
-  <mat-card-title>About Mbot</mat-card-title>
+  <mat-card-header>
+
+    <mat-icon mat-card-avatar>info</mat-icon>
+
+    <mat-card-title>About Mbot</mat-card-title>
+  </mat-card-header>
   <mat-divider></mat-divider>
 
   <mat-card-content>
