--- a/src/app/dashboard-balance/dashboard-balance.component.html
+++ b/src/app/dashboard-balance/dashboard-balance.component.html
@@ -1,7 +1,11 @@
 
   <mat-card class="card-test">
-      <mat-icon>info</mat-icon>
-      <mat-card-title>TOTAL BALANCE</mat-card-title>
+    <mat-card-header>
+
+      <mat-icon mat-card-avatar>info</mat-icon>
+      <mat-card-title>Total Balance</mat-card-title>
+
+    </mat-card-header>
     <mat-divider></mat-divider>
     <app-diagram class="row"></app-diagram>
     <div class="row">
