--- a/src/app/dashboard-performance/dashboard-performance.component.html
+++ b/src/app/dashboard-performance/dashboard-performance.component.html
@@ -3,7 +3,7 @@
 
     <mat-icon mat-card-avatar>info</mat-icon>
 
-    <mat-card-title>PERFORMANCE</mat-card-title>
+    <mat-card-title>Performance</mat-card-title>
   </mat-card-header>
   <mat-divider></mat-divider>
   <mat-card-content>
