--- a/src/app/trades/trades.component.html
+++ b/src/app/trades/trades.component.html
@@ -1,7 +1,12 @@
 <div class="content">
-<mat-card>
-  <mat-card-title>My Trades</mat-card-title>
+<mat-card class="card-test">
+  <mat-card-header>
 
+    <mat-icon mat-card-avatar>info</mat-icon>
+
+    <mat-card-title>Trades</mat-card-title>
+  </mat-card-header>
+  <mat-divider></mat-divider>
   <div>
     <app-trades-detail-table></app-trades-detail-table>
   </div>
