--- a/src/app/dashboard-trades/dashboard-trades.component.html
+++ b/src/app/dashboard-trades/dashboard-trades.component.html
@@ -1,9 +1,13 @@
 
-  <mat-card class="card-test rcorners">
-    <mat-card-content>
-    <mat-icon>info</mat-icon>
-    <mat-card-title>TRADES</mat-card-title>
+  <mat-card class="card-test">
+    <mat-card-header>
+
+      <mat-icon mat-card-avatar>info</mat-icon>
+
+      <mat-card-title>Trades</mat-card-title>
+    </mat-card-header>
     <mat-divider></mat-divider>
+    <mat-card-content>
       <app-trades-detail-table></app-trades-detail-table>
 
     <mat-card-actions style="text-align: center;">
