--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,11 +1,3 @@
-  :host {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-    font-size: 14px;
-    color: #333;
-    box-sizing: border-box;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-  }
 
   .footer {
     position: fixed;
@@ -17,10 +9,10 @@
     box-shadow: 0px -2px 8px rgba(0, 0, 0, 0.1);
     align-items: center;
     background-color: white;
-    color: #CFCFCF;
+    font-family: Gramatika;
 
-    font-weight: 600;
   }
   .copyright {
   margin-left: auto; margin-right: auto;
+  color: #CFCFCF;
   }
