--- a/src/app/about-detail/about-detail.component.html
+++ b/src/app/about-detail/about-detail.component.html
@@ -11,23 +11,26 @@
     <p>The MBot is a cryptocurrency bot, capable of trading many cryptocurrencies at runtime. It depends on the GitHub open source project Zenbot, mainly maintained by the developer DeviaVir, which makes automated cryptocurrency trading possible.
     Where the Zenbot is only capable of trading one cryptocurrency trading pair, the MBot, which consists of many Zenbots, renders multiple trading pairs possible.
     Simply put, the MBot is a docker-compose stack of n Zenbots, where n is the desired amount of trading pairs.</p>
-
-      <mat-card-title>Technologies and Tools:</mat-card-title>
+  <div class="row">
+    <div class="column-two">
+      <h3>Technologies and Tools:</h3>
 
       <p>Git, GitHub, Markdown, Docker/Docker-Compose, Windows, Linux, IntelliJ, MongoDB, JavaScript, either REST or GraphQL,
         optionally Java, Angular, Figma, AfterEffects, Lottie, HTML, CSS
       </p>
-      <mat-card-title>Team:</mat-card-title>
+    </div>
+    <div class="column-two">
+      <h3>Team:</h3>
 
       <ul>
-        <li>Olga Toltinova</li>
-        <li>User Interface/ Frontend Developer (UI/FE) </li>
-        <li>External Team (1) </li>
-        <li>Backend Developer / Project Manager (BE/PM) </li>
-        <li>DeviaVir </li>
-        <li>Maintainer of the Github Open Source ZenBot project </li>
+        <li>Olga Toltinova: User Interface/ Frontend Developer (UI/FE) </li>
+        <li>External Team (1): Backend Developer / Project Manager (BE/PM) </li>
+        <li>DeviaVir: maintainer of the Github Open Source ZenBot project </li>
       </ul>
-      <a mat-raised-button color ="accent" href="https://github.com/DeviaVir/zenbot">Visit the project page</a>
-
+    </div>
+  </div>
+  <a mat-raised-button color ="accent" href="https://github.com/DeviaVir/zenbot">Visit the project page</a>
   </mat-card-content>
+
+
 </mat-card>
