added gradient to the diagram

--- a/src/app/adjust-strategy/adjust-strategy.component.html
+++ b/src/app/adjust-strategy/adjust-strategy.component.html
@@ -1,6 +1,11 @@
 <div class="content" role="main">
 <mat-card class="card-test">
-  <mat-card-title>Adjusting the strategy</mat-card-title>
+  <mat-card-header>
+
+    <mat-icon mat-card-avatar>info</mat-icon>
+
+    <mat-card-title>Adjusting the strategy</mat-card-title>
+  </mat-card-header>
   <mat-divider></mat-divider>
 
   <mat-card-content>
