--- a/src/app/diagram/diagram.component.html
+++ b/src/app/diagram/diagram.component.html
@@ -1,4 +1,5 @@
-<ngx-charts-pie-chart
+<div class="img-gradient">
+  <ngx-charts-pie-chart
   [view]="view"
   [scheme]="colorScheme"
   [results]="tradeData"
@@ -8,5 +9,5 @@
   [labels]="showLabels"
   [doughnut]="isDoughnut"
   [tooltipDisabled]="tooltipDisabled"
->
-</ngx-charts-pie-chart>
+  ></ngx-charts-pie-chart>
+</div>
